--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.0"
 
 services:
   flask-app:
-    images: ${DOCKER_USR}/flask-app
+    image: ${DOCKER_USR}/flask-app
     build: .
     ports:
       - "80:8000"
